--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- ... include necessary CSS and JavaScript files ... -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
 
         <!-- Message input -->
         <input type="text" id="message-input" placeholder="Type a message...">
-        <button onclick="sendMessage()">Send</button>
+        <button id="send-button" onclick="sendMessage()">Send</button>
 
         <!-- Image upload form -->
         <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
